test/tests/operators/from_http/from_http_paginate_link_unreachable.txt
error: cannot_connect_to_node: AsyncSocketException: connect failed, type = Socket not open
 --> tests/operators/from_http/from_http_paginate_link_unreachable.tql:7:1
  |
7 | from_http env("HTTP_FIXTURE_LINK_UNREACHABLE_URL"),
  | ^^^^^^^^^ 
  |
